Migrating StarRating to float, solving ARM issues

As reported by Robin Lee in KDE bug 353898, qreal
is defined differently in Qt on different platforms.
Code that compiles on x86 platforms fails on ARM.
By consequently using float instead of qreal, this
issue can be avoided.

Beside fixing this bug, some code has been refactored
by moving a function from the class's public interface
(header) to a private class.

BUG: 353898